--- a/public/testActive.html
+++ b/public/testActive.html
@@ -59,7 +59,7 @@
     <nav class="navbar navbar-light navbar-5 white">
 
         <!-- Navbar brand -->
-        <a class="navbar-brand" href="#"><p>LOGO</p></a>
+        <a class="navbar-brand" href="#"><p>LOGO - WILL THIS WORK!!?</p></a>
     
         <!-- Collapse button -->
         <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15"
